--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@react-spring/web": "^9.7.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.301.0",
 		"next": "14.0.4",
 		"react": "^18",
@@ -24,6 +25,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.202",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
