--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.301.0",
 		"next": "14.0.4",
+		"next-themes": "^0.2.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwind-merge": "^2.2.0",
